--- a/main.ipynb
+++ b/main.ipynb
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "id": "8b941757",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1022,8 @@
     "plt.figure(figsize=(6,4))\n",
     "sns.heatmap(corr, annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
     "plt.title(\"Correlation Heatmap of Numeric Features\", fontsize=14)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
