--- a/main.ipynb
+++ b/main.ipynb
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "0139b2ff",
    "metadata": {},
    "outputs": [
@@ -940,9 +940,9 @@
     }
    ],
    "source": [
-    "cuisine_counts = zom_df_exp[\"cuisines\"].value_counts().head(10)  # top 10 cuisines\n",
+    "cuisine_counts = zom_df_exp[\"cuisines\"].value_counts().head(10) \n",
     "\n",
-    "# Plot pie chart\n",
+    "\n",
     "plt.figure(figsize=(8,8))\n",
     "plt.pie(\n",
     "    cuisine_counts,\n",
@@ -1022,8 +1022,7 @@
     "plt.figure(figsize=(6,4))\n",
     "sns.heatmap(corr, annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
     "plt.title(\"Correlation Heatmap of Numeric Features\", fontsize=14)\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
